Fixed horizontal scrolling

--- a/src/styles/flexTable.module.scss
+++ b/src/styles/flexTable.module.scss
@@ -5,11 +5,10 @@
     box-sizing: border-box;
   }
 
-  display: flex;
+  display: inline-flex;
   border-radius: 3px;
   flex-direction: column;
-  height: 82%;
-  overflow-x: auto;
+  height: 100%;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 
   &__header {
@@ -29,14 +28,18 @@
         display: flex;
         align-items: center;
 
-        svg {
+        .sort-icon {
           cursor: pointer;
           margin-left: 1px;
           border: 1px solid transparent;
           transition: all 0.2s;
+
+          &.active {
+            color: $color-grey-7;
+          }
         }
 
-        svg:hover {
+        .sort-icon:hover {
           border: 1px solid white;
           border-radius: 50%;
         }
