--- a/src/styles/scrape.module.scss
+++ b/src/styles/scrape.module.scss
@@ -79,6 +79,7 @@
 
 // Full table content
 .tableContainer {
-  height: 100%;
+  height: 80%;
+  overflow-x: auto;
   padding: 0rem 1.5rem 2rem 1.5rem;
 }
